--- a/juego.html
+++ b/juego.html
@@ -10,15 +10,16 @@
   </head>
   <body>
   
-  <div class="canvas">
+  <div id="canvas">
     <canvas class="canvas2" width="600" height="500"></canvas>
     <div class="letras_Erroneas">Letras Erroneas</div>
-    <div class="despues"></div>
+    <div id="despues"></div>
   </div>
 
-  <div class ="animacionClase" id="div1">div1</div><!--metodo defer puede ayudar a cuadrar lo de las jerarquias-->
+  <div class ="animacionClase"></div>
+  <div  id="div1"></div><!--metodo defer puede ayudar a cuadrar lo de las jerarquias-->
 
-  <div id="div2">El texto superior es donde quedara la palabra</div>
+  <div id="div2"></div>
     
     <div id="div3">
       <form action="index.html">
