--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Ahorcado</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styleindex.css">
   </head>
-
-    <div style="text-align:center; margin: 50px 0px;">
+  <body>
+    <header class="bg_animate">
+    <div style="text-align:center; margin: 0px 0px;">
       <h1 class="titulo">Ahorcado</h1>
       <form action="juego.html">
         <input type="submit" class="smit" value="INICIAR JUEGO"/>
@@ -24,5 +25,6 @@
 
     <script type="text/javascript" src="canvas.js"></script>
     <script type="text/javascript" src="ahorcado.js"></script>
+  </header>
   </body>
 </html>
