first advance to github pages

--- a/juego.html
+++ b/juego.html
@@ -17,7 +17,7 @@
   </div>
 
   <div class ="animacionClase"></div>
-  <div  id="div1"></div><!--metodo defer puede ayudar a cuadrar lo de las jerarquias-->
+  <div  id="div1"></div>
 
   <div id="div2"></div>
     
